fixed header items not aligning

--- a/static/index.css
+++ b/static/index.css
@@ -205,6 +205,7 @@
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
      gap: 10px;
+     margin-top: 12px;
      margin-bottom: 12px;
 
  }
@@ -231,17 +232,16 @@
 
 }
 
+ #projects  h3{
+     /*text-decoration: underline;*/
+     /*text-decoration-color: var(--primary-alpha);*/
+     display: flex;
+     align-items: center;
+     margin: 0;
+ }
 
 /*collapse*/
 
-#projects  h3{
-    /*text-decoration: underline;*/
-    /*text-decoration-color: var(--primary-alpha);*/
-    display: flex;
-    align-items: center;
-    margin-top: 0;
-
- }
 
  .icon{
      margin: 12px 15px;
